--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="styles.css" />
+  <title>Карточки | Проект 1</title>
 </head>
 <body>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab commodi corporis delectus dignissimos dolores ducimus
-    esse expedita facere illo in, iure laborum nesciunt, nostrum officiis quas ratione, saepe suscipit tenetur.</p>
+<div class="container">
+  <div class="slide active" style="background-image: url('img/img-01.jpg');">
+    <h3>Slide 01</h3>
+  </div>
+  <div class="slide" style="background-image: url('img/img-02.jpg');">
+    <h3>Minions 2</h3>
+  </div>
+  <div class="slide" style="background-image: url('img/img-03.jpg');">
+    <h3>Slide 03</h3>
+  </div>
+  <div class="slide" style="background-image: url('img/img-04.jpg');">
+    <h3>Slide 04</h3>
+  </div>
+  <div class="slide" style="background-image: url('img/img-05.jpg');">
+    <h3>Slide 05</h3>
+  </div>
+</div>
+
+
+<script src="app.js"></script>
 </body>
 </html>
