--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-  <div class="slide active" style="background-image: url('img/img-01.jpg');">
+  <div class="slide" style="background-image: url('img/img-01.jpg');">
     <h3>Slide 01</h3>
   </div>
   <div class="slide" style="background-image: url('img/img-02.jpg');">
